@@ -71,34 +71,11 @@ typedef enum
   } status_t;
 
 
-/* Types of files that contain known hashes */
-typedef enum 
-  {
-    file_plain,
-    file_bsd,
-    file_hashkeeper,
-    file_nsrl_15,
-    file_nsrl_20,
-    file_encase3,
-    file_encase4,
-    file_ilook,
-
-    /* Files generated by md5deep with the ten digit filesize at the start 
-       of each line */
-    file_md5deep_size,
-
-    file_hashdeep_10
-    
-    /* RBF - file_unknown is already used in common.h now */
-//    file_unknown
-    
-  } filetype_t; 
 
 /* These describe the version of the file format being used, not
    the version of the program. */
-#define HASHDEEP_PREFIX  "%%%% "
-#define HASHDEEP_VERSION "1.0"
-
+#define HASHDEEP_PREFIX     "%%%% "
+#define HASHDEEP_HEADER_10  "%%%% HASHDEEP-1.0"
 
 typedef struct _file_data_t
 {
@@ -145,6 +122,7 @@ typedef struct _algorithm_t
   /* We always store the result in a file_data structure */
   //  unsigned char   * result;
 
+  uint8_t         position;
   unsigned char   * hash_sum;
   int             inuse;
   uint64_t        howmany;
@@ -198,6 +176,7 @@ struct _state {
   algorithm_t   * hashes[NUM_ALGORITHMS];
   file_data_t   * known, * last;
   uint64_t        hash_round;
+  uint8_t         hash_order[NUM_ALGORITHMS];
 
   int             banner_displayed;
 
